# internal/delivery/http/dto/auth_dto.go
@@ -2,9 +2,10 @@ package dto
 
 // RegisterRequest adalah DTO untuk data yang masuk saat registrasi.
 type RegisterRequest struct {
-	Name     string `json:"name" binding:"required"`
-	Email    string `json:"email" binding:"required,email"`
-	Password string `json:"password" binding:"required,min=8"`
+	Name       string  `json:"name" binding:"required"`
+	Email      string  `json:"email" binding:"required,email"`
+	Password   string  `json:"password" binding:"required,min=8"`
+	LocationID *string `json:"location_id,omitempty"`
 }
 
 type LoginRequest struct {
